--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;600;700;900;1,800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.cl-internal-b3fm6y {
+  display: none !important;
+}
+
+.cl-card {
+  border-radius: 4px !important;
+}
+
+input{
+  width: 100% !important;
+}
+
+.ant-form-item{
+  margin-bottom: 5px !important;
+}
